version 2.1-rc1 - XX-Mar-2013
. [NEW] DrawingPrimitives: Added DrawSolidCircle, DrawArc, DrawSolidArc (issue #1465)
. [NEW] GLProgram: Added 2 class methods to create the instance
. [NEW] MenuItem: rect -> renamed activeArea. If contentSize is modified, activeArea is modified too
. [PRF] Uniforms: small performance improvement when setting uniforms
. [FIX] ClippingNode: Uses glClear to clear the stencil buffer (issue #1463)
. [FIX] Director: Only create the statsLabels if view is not nil
. [FIX] GLProgram: If shader files are not found at init time, returns nil and log warning on console
. [FIX] RenderTexture: returns correct value of contentSize
			Internal sprite sets opacityModifyRGB=YES (issue #1464)
. [FIX] Texture2D: Logs using RGB565 textures only if RGB565 is being used
			Fixed deprecation warnings on iOS6 (issue #1467)
. [3RD] JS Bindings: Updated to v0.6
. [3RD] CCBReader: new version of CCBReader (which version is it???)
. [3RD] SpiderMonkey: Updated to v19.0

version 2.1-rc0a  07-Feb-2013
. [NEW] Actions: Stackable actions behavior can be disabled at compile time (issue #1461)
		BezierTo copy: works as expected
. [FIX] LabelBMFont: setting color of label and individual chars works as expected
. [FIX] RGBAProtocol: color and opacity are propagated if parent has cascade property enabled
		renamed methods: cascadeColor -> cascadeColorEnabled, cascadeOpacity -> cascadeOpacityEnabled
. [FIX] Sprite: color code improved. Removed 'unmodifiedColor' ivar.
. [FIX] SpriteFrame: rectInPixels is calculated correctly

version 2.1-rc0	 28-Jan-2013
. [NEW] Actions: All the actions that modify the position property can be run at the same time.
		MoveBy/To, JumpBy/To, BezierTo/By, CatmullRomTo/By and CardinalSplineTo/By won't override the results of previous actions.
. [NEW] FileUtils: Added "filename lookup" dictionary, useful to alter the name of an asset in runtime. Useful for cross platform
. [NEW] GLProgram: Added uniformLocationForName: method