@@ -2,14 +2,15 @@ version 2.1-rc1 - XX-Mar-2013
 . [NEW] DrawingPrimitives: Added DrawSolidCircle, DrawArc, DrawSolidArc (issue #1465)
 . [NEW] GLProgram: Added 2 class methods to create the instance
 . [NEW] MenuItem: rect -> renamed activeArea. If contentSize is modified, activeArea is modified too
-. [PRF] Uniforms: small performance improvement when setting uniforms
 . [FIX] ClippingNode: Uses glClear to clear the stencil buffer (issue #1463)
 . [FIX] Director: Only create the statsLabels if view is not nil
+. [FIX] EaseActions: fixed rounding error in BounceXXX and ExpXXX actions
 . [FIX] GLProgram: If shader files are not found at init time, returns nil and log warning on console
 . [FIX] RenderTexture: returns correct value of contentSize
 			Internal sprite sets opacityModifyRGB=YES (issue #1464)
 . [FIX] Texture2D: Logs using RGB565 textures only if RGB565 is being used
 			Fixed deprecation warnings on iOS6 (issue #1467)
+. [PERF] Uniforms: small performance improvement when setting uniforms
 . [3RD] JS Bindings: Updated to v0.6
 . [3RD] CCBReader: new version of CCBReader (which version is it???)
 . [3RD] SpiderMonkey: Updated to v19.0
